log
Wed 19 Apr 2023 10:07:56 PM UTC: 
 tests:  1|8
total_score: 0/70
aa5b5be
Wed 19 Apr 2023 10:11:06 PM UTC: 
 treemap.c | 8 +++++---
 1 file changed, 5 insertions(+), 3 deletions(-)
In file included from test.c:4:
treemap.c: In function ‘createTreeMap’:
treemap.c:41:6: error: ‘TreeMap’ has no member named ‘size’
   41 |   map->size = 0;
      |      ^~
treemap.c:43:21: error: ‘lt’ undeclared (first use in this function)
   43 |   map->lower_than = lt;
      |                     ^~
treemap.c:43:21: note: each undeclared identifier is reported only once for each function it appears in
Compilation failed
4f88050
Wed 19 Apr 2023 10:12:14 PM UTC: 
 treemap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:4:
treemap.c: In function ‘createTreeMap’:
treemap.c:41:6: error: ‘TreeMap’ has no member named ‘size’
   41 |   map->size = 0;
      |      ^~
Compilation failed
9d6f2fa
Wed 19 Apr 2023 10:12:32 PM UTC: 
 treemap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  4|7
total_score: 5/70
f9e74a6
Thu 20 Apr 2023 02:57:47 PM UTC: 
 treemap.c | 13 ++++++++++++-
 1 file changed, 12 insertions(+), 1 deletion(-)
In file included from test.c:4:
treemap.c: In function ‘searchTreeMap’:
treemap.c:78:29: error: ‘TreeMap’ has no member named ‘compareKeys’
   78 |         int cmpResult = tree->compareKeys(key, currentNode->key);
      |                             ^~
treemap.c:78:59: error: ‘TreeNode’ has no member named ‘key’
   78 |         int cmpResult = tree->compareKeys(key, currentNode->key);
      |                                                           ^~
treemap.c:87:1: error: control reaches end of non-void function [-Werror=return-type]
   87 | }
      | ^
cc1: all warnings being treated as errors
Compilation failed
e3efe56
Thu 20 Apr 2023 02:58:23 PM UTC: 
 treemap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:4:
treemap.c: In function ‘searchTreeMap’:
treemap.c:78:29: error: ‘TreeMap’ has no member named ‘compareKeys’
   78 |         int cmpResult = tree->compareKeys(key, currentNode->key);
      |                             ^~
treemap.c:78:59: error: ‘TreeNode’ has no member named ‘key’
   78 |         int cmpResult = tree->compareKeys(key, currentNode->key);
      |                                                           ^~
treemap.c:84:21: error: assignment to ‘TreeNode *’ from ‘int’ makes pointer from integer without a cast [-Werror=int-conversion]
   84 |         currentNode = (cmpResult < 0)  currentNode->left : currentNode->right;
      |                     ^
treemap.c:84:38: error: expected ‘;’ before ‘currentNode’
   84 |         currentNode = (cmpResult < 0)  currentNode->left : currentNode->right;
      |                                      ^ ~~~~~~~~~~~
      |                                      ;
treemap.c:87:1: error: control reaches end of non-void function [-Werror=return-type]
   87 | }
      | ^
cc1: all warnings being treated as errors
Compilation failed
1600c04
Thu 20 Apr 2023 02:59:09 PM UTC: 
 treemap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:4:
treemap.c: In function ‘searchTreeMap’:
treemap.c:78:29: error: ‘TreeMap’ has no member named ‘compareKeys’
   78 |         int cmpResult = tree->compareKeys(key, currentNode->key);
      |                             ^~
treemap.c:78:59: error: ‘TreeNode’ has no member named ‘key’
   78 |         int cmpResult = tree->compareKeys(key, currentNode->key);
      |                                                           ^~
treemap.c:84:21: error: assignment to ‘TreeNode *’ from ‘int’ makes pointer from integer without a cast [-Werror=int-conversion]
   84 |         currentNode = (cmpResult < 0) : currentNode->left : currentNode->right;
      |                     ^
treemap.c:84:38: error: expected ‘;’ before ‘:’ token
   84 |         currentNode = (cmpResult < 0) : currentNode->left : currentNode->right;
      |                                      ^~
      |                                      ;
treemap.c:87:1: error: control reaches end of non-void function [-Werror=return-type]
   87 | }
      | ^
cc1: all warnings being treated as errors
Compilation failed
17f864e
Thu 20 Apr 2023 02:59:46 PM UTC: 
 treemap.c | 5 ++++-
 1 file changed, 4 insertions(+), 1 deletion(-)
In file included from test.c:4:
treemap.c: In function ‘searchTreeMap’:
treemap.c:78:29: error: ‘TreeMap’ has no member named ‘compareKeys’
   78 |         int cmpResult = tree->compareKeys(key, currentNode->key);
      |                             ^~
treemap.c:78:59: error: ‘TreeNode’ has no member named ‘key’
   78 |         int cmpResult = tree->compareKeys(key, currentNode->key);
      |                                                           ^~
Compilation failed
870616d
Thu 20 Apr 2023 03:01:37 PM UTC: 
 treemap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:4:
treemap.c: In function ‘searchTreeMap’:
treemap.c:78:29: error: ‘TreeMap’ has no member named ‘cmp’
   78 |         int cmpResult = tree->cmp(key, currentNode->key);
      |                             ^~
treemap.c:78:51: error: ‘TreeNode’ has no member named ‘key’
   78 |         int cmpResult = tree->cmp(key, currentNode->key);
      |                                                   ^~
Compilation failed
95ada69
Thu 20 Apr 2023 03:02:45 PM UTC: 
 treemap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:4:
treemap.c: In function ‘searchTreeMap’:
treemap.c:78:29: error: ‘TreeMap’ has no member named ‘cmp’
   78 |         int cmpResult = tree->cmp(key , currentNode->pair->key);
      |                             ^~
Compilation failed
d9fcb1e
Thu 20 Apr 2023 03:07:48 PM UTC: 
 treemap.c | 24 ++++++++++++++++++++++++
 1 file changed, 24 insertions(+)
In file included from test.c:4:
treemap.c: In function ‘insertTreeMap’:
treemap.c:53:25: error: ‘TreeMap’ has no member named ‘compareKeys’
   53 |         cmpResult = tree->compareKeys(key, currentNode->pair->key);
      |                         ^~
treemap.c: In function ‘searchTreeMap’:
treemap.c:103:29: error: ‘TreeMap’ has no member named ‘cmp’
  103 |         int cmpResult = tree->cmp(key, currentNode->pair->key);
      |                             ^~
Compilation failed
d3ad24f
Thu 20 Apr 2023 03:11:53 PM UTC: 
 treemap.c | 5 +++++
 1 file changed, 5 insertions(+)
In file included from test.c:4:
treemap.c: In function ‘insertTreeMap’:
treemap.c:58:25: error: ‘TreeMap’ has no member named ‘compareKeys’
   58 |         cmpResult = tree->compareKeys(key, currentNode->pair->key);
      |                         ^~
treemap.c: In function ‘searchTreeMap’:
treemap.c:108:29: error: ‘TreeMap’ has no member named ‘cmp’
  108 |         int cmpResult = tree->cmp(key, currentNode->pair->key);
      |                             ^~
Compilation failed
7a1953b
Thu 20 Apr 2023 03:12:45 PM UTC: 
 treemap.c | 1 +
 1 file changed, 1 insertion(+)
In file included from test.c:4:
treemap.c:14:3: error: expected specifier-qualifier-list before ‘tree’
   14 |   tree->compareKeys = &compareIntKeys;
      |   ^~~~
treemap.c: In function ‘insertTreeMap’:
treemap.c:59:25: error: ‘TreeMap’ has no member named ‘compareKeys’
   59 |         cmpResult = tree->compareKeys(key, currentNode->pair->key);
      |                         ^~
treemap.c: In function ‘searchTreeMap’:
treemap.c:109:29: error: ‘TreeMap’ has no member named ‘cmp’
  109 |         int cmpResult = tree->cmp(key, currentNode->pair->key);
      |                             ^~
Compilation failed
4bd3ecd
Thu 20 Apr 2023 03:14:05 PM UTC: 
 treemap.c | 8 +-------
 1 file changed, 1 insertion(+), 7 deletions(-)
In file included from test.c:4:
treemap.c: In function ‘searchTreeMap’:
treemap.c:103:29: error: ‘TreeMap’ has no member named ‘cmp’
  103 |         int cmpResult = tree->cmp(key, currentNode->pair->key);
      |                             ^~
Compilation failed
ae03026
Thu 20 Apr 2023 03:14:25 PM UTC: 
 treemap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  6|7
total_score: 5/70
d80d949
